gitops/apps/simple-time-service/overlays/dev/patch-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-time-service-ingress
spec:
  rules:
    - host: dev-time.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-time-service
                port:
                  number: 80
  tls:
    - hosts:
        - dev-time.example.com
      secretName: dev-time-tls
